gitops/cicd/nexus2/nexus-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 4m
    template.openshift.io/expose-uri: http://{.spec.host}{.spec.path}
  labels:
    app: nexus
    template: nexus2-persistent-template
  name: nexus
  namespace: cicd
spec:
  host: nexus-cicd.apps.openshift.openshift.npe-rdg.net
  port:
    targetPort: 8081-tcp
  subdomain: ""
  to:
    kind: Service
    name: nexus
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    host: nexus-cicd.apps.openshift.openshift.npe-rdg.net
    routerCanonicalHostname: apps.openshift.openshift.npe-rdg.net
    routerName: default
    wildcardPolicy: None
